--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             loop="true"
             autostart="true"
             style="position: absolute; bottom: 0; left: 0"
+            hidden="true"
         />
     </body>
 </html>
